# FAPCOINBOT

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted---1768823415919_1768823415920.txt  Pasted--message-2026-01-26-20-30-16-431-src-database-betting-d_1769459434278.txt  Pasted--message-OSError-Multiple-exceptions-Errno-111-Connect-_1769459175544.txt  Pasted--message-Starting-Container-attributes-level-info-times_1769463398576.txt  Pasted--return-await-handler-event-data-File-opt-venv-lib-py-1_1768850811734.txt  Pasted--return-runner-run-main-File-root-nix-profile-lib-pytho_1769456730704.txt  Pasted-2026-01-19-11-34-30-486-main-INFO-Initializing-database_1768822558265.txt  Pasted-2026-01-21-12-31-31-194-aiogram-event-INFO-Update-id-59_1769004160398.txt  Pasted-2026-01-26T19-56-40-000000000Z-info-Starting-Container-_1769457518094.txt  Pasted-Region-europe-west4-Using-Nixpacks-context-s2rq-mnaq--1_1769464959480.txt  Pasted-Rewards-Starting-distribution-of-0-144787-SOL--17688354_1768835443476.txt  Pasted-Starting-Container-2026-01-26-17-48-58-045-main-INFO-In_1769450059099.txt  Pasted-You-reached-the-start-of-the-range-Jan-26-2026-at-8-49-_1769457146827.txt
src/database/: betting_db.py  betting_models.py  db.py  models.py
src/handlers/: commands.py
src/utils/: wallet.py
